--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-matplotlib==3.5.3
-scikit-learn==1.1.2
-pytest==7.1.3
+matplotlib==3.7.2
+scikit-learn==1.3.0
+pytest==7.4.2
+pandas==2.1.1
 flask==2.2.2
