class 10 command parameter argument added

--- a/.github/workflows/action-demo.yml
+++ b/.github/workflows/action-demo.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions Demo
-on: [push]
+on: [push,workflow_dispatch]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -20,7 +20,7 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Install dep
         run:  pip3 install --no-cache-dir -r requirements.txt
-      - name: Run Pytest
-        run: pytest
-      - name: Run experiment
-        run: python exp.py
+      - name: Run test cases
+        run: python3 -m pytest
+      - name: Run code
+        run: python3 digits.py --runs 4 --test_sizes 0.2,0.3 --dev_sizes 0.2 --models svm,tree
