--- a/.github/workflows/action-demo.yml
+++ b/.github/workflows/action-demo.yml
@@ -20,7 +20,9 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Install dep
         run:  pip3 install --no-cache-dir -r requirements.txt
-      - name: Run test cases
-        run: python3 -m pytest
       - name: Run code
         run: python3 digits.py --runs 4 --test_sizes 0.2,0.3 --dev_sizes 0.2 --models svm,tree
+      - name: Run test cases
+        run: python3 -m pytest
+      - name: Run docker commands
+        run: source ./docker/docker_run.sh
